SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1201916

--- a/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
+++ b/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
@@ -22,6 +22,7 @@ Name[nl]=KAddressbook Instant Messaging-protocol
 Name[nn]=Lynmeldingsprotokoll for KDE-adresseboka
 Name[pt]=Protocolo de Mensagens Instantâneas do KAddressbook
 Name[pt_BR]=Protocolo de Mensagens Instantâneas do KAddressbook
+Name[ro]=Protocol de mesagerie instantanee a cărții de adrese
 Name[sr]=Брзогласнички протокол К‑адресра
 Name[sr@ijekavian]=Брзогласнички протокол К‑адресра
 Name[sr@ijekavianlatin]=Brzoglasnički protokol K‑adresra
