--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -23,6 +23,7 @@ Comment[nl]=AIM-protocol
 Comment[nn]=AIM-protokoll
 Comment[pt]=Protocolo AIM
 Comment[pt_BR]=Protocolo do AIM
+Comment[ro]=Protocol AIM
 Comment[ru]=Протокол AIM
 Comment[sr]=Протокол АИМ
 Comment[sr@ijekavian]=Протокол АИМ
@@ -55,6 +56,7 @@ Name[nl]=AIM
 Name[nn]=AIM
 Name[pt]=AIM
 Name[pt_BR]=AIM
+Name[ro]=AIM
 Name[ru]=AIM
 Name[sr]=АИМ
 Name[sr@ijekavian]=АИМ
