--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -23,6 +23,7 @@ Comment[nl]=Protocol voor Novell GroupWise Messenger
 Comment[nn]=Lynmeldingstenesta Novell GroupWise
 Comment[pt]=Novell GroupWise Messenger
 Comment[pt_BR]=Mensageiro do GroupWise da Novell
+Comment[ro]=Mesagerul Novell GroupWise
 Comment[sr]=Новелов Групвајз месенџер
 Comment[sr@ijekavian]=Новелов Групвајз месенџер
 Comment[sr@ijekavianlatin]=Novellov GroupWise Messenger
@@ -54,6 +55,7 @@ Name[nl]=GroupWise
 Name[nn]=GroupWise
 Name[pt]=GroupWise
 Name[pt_BR]=GroupWise
+Name[ro]=GroupWise
 Name[sr]=Групвајз
 Name[sr@ijekavian]=Групвајз
 Name[sr@ijekavianlatin]=GroupWise
