--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -23,6 +23,7 @@ Comment[nl]=ICQ-protocol
 Comment[nn]=ICQ-protokoll
 Comment[pt]=Protocolo ICQ
 Comment[pt_BR]=Protocolo do ICQ
+Comment[ro]=Protocol ICQ
 Comment[ru]=Протокол ICQ
 Comment[sr]=Протокол ајсикју
 Comment[sr@ijekavian]=Протокол ајсикју
@@ -55,6 +56,7 @@ Name[nl]=ICQ
 Name[nn]=ICQ
 Name[pt]=ICQ
 Name[pt_BR]=ICQ
+Name[ro]=ICQ
 Name[ru]=ICQ
 Name[sr]=ајсикју
 Name[sr@ijekavian]=ајсикју
