--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -23,6 +23,7 @@ Comment[nl]=Internet Relay Chat
 Comment[nn]=Internet Relay Chat
 Comment[pt]=Internet Relay Chat
 Comment[pt_BR]=Bate-papo via Internet (IRC)
+Comment[ro]=Internet Relay Chat
 Comment[sr]=Ћаскање путем Интернета
 Comment[sr@ijekavian]=Ћаскање путем Интернета
 Comment[sr@ijekavianlatin]=Ćaskanje putem Interneta
@@ -53,6 +54,7 @@ Name[nl]=IRC
 Name[nn]=IRC
 Name[pt]=IRC
 Name[pt_BR]=IRC
+Name[ro]=IRC
 Name[ru]=IRC
 Name[sr]=ИРЦ
 Name[sr@ijekavian]=ИРЦ
