--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -23,6 +23,7 @@ Comment[nl]=Meanwhile-protocol
 Comment[nn]=Meanwhile-protokoll
 Comment[pt]=Protocolo Meanwhile
 Comment[pt_BR]=Protocolo do Meanwhile
+Comment[ro]=Protocol Meanwhile
 Comment[sr]=Протокол минвајл
 Comment[sr@ijekavian]=Протокол минвајл
 Comment[sr@ijekavianlatin]=Protokol Meanwhile
@@ -54,6 +55,7 @@ Name[nl]=Meanwhile
 Name[nn]=Meanwhile
 Name[pt]=Meanwhile
 Name[pt_BR]=Meanwhile
+Name[ro]=Meanwhile
 Name[sr]=Минвајл
 Name[sr@ijekavian]=Минвајл
 Name[sr@ijekavianlatin]=Meanwhile
