--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -23,6 +23,7 @@ Comment[nl]=MSN Messenger
 Comment[nn]=MSN Messenger
 Comment[pt]=MSN Messenger
 Comment[pt_BR]=MSN Messenger
+Comment[ro]=Mesagerul MSN
 Comment[sr]=МСН месенџер
 Comment[sr@ijekavian]=МСН месенџер
 Comment[sr@ijekavianlatin]=MSN Messenger
@@ -53,6 +54,7 @@ Name[nl]=MSN Messenger
 Name[nn]=MSN Messenger
 Name[pt]=MSN Messenger
 Name[pt_BR]=MSN Messenger
+Name[ro]=Mesagerul MSN
 Name[sr]=МСН месенџер
 Name[sr@ijekavian]=МСН месенџер
 Name[sr@ijekavianlatin]=MSN Messenger
