--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -23,6 +23,7 @@ Comment[nl]=Skype internet-telefonie
 Comment[nn]=Skype Internett-telefoni
 Comment[pt]=Telefonia Internet Skype
 Comment[pt_BR]=Telefonia Internet Skype
+Comment[ro]=Telefonie prin internet Skype
 Comment[sr]=Скајп, интернет телефонија
 Comment[sr@ijekavian]=Скајп, интернет телефонија
 Comment[sr@ijekavianlatin]=Skype, internet telefonija
@@ -53,6 +54,7 @@ Name[nl]=Skype
 Name[nn]=Skype
 Name[pt]=Skype
 Name[pt_BR]=Skype
+Name[ro]=Skype
 Name[sr]=Скајп
 Name[sr@ijekavian]=Скајп
 Name[sr@ijekavianlatin]=Skype
