--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -23,6 +23,7 @@ Comment[nl]=SMS-protocol
 Comment[nn]=SMS-protokoll
 Comment[pt]=Protocolo SMS
 Comment[pt_BR]=Protocolo SMS
+Comment[ro]=Protocol SMS
 Comment[sr]=Протокол СМС
 Comment[sr@ijekavian]=Протокол СМС
 Comment[sr@ijekavianlatin]=Protokol SMS
@@ -54,6 +55,7 @@ Name[nl]=SMS
 Name[nn]=SMS
 Name[pt]=SMS
 Name[pt_BR]=SMS
+Name[ro]=SMS
 Name[sr]=СМС
 Name[sr@ijekavian]=СМС
 Name[sr@ijekavianlatin]=SMS
