--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -23,6 +23,7 @@ Comment[nl]=Yahoo-protocol
 Comment[nn]=Yahoo!-protokoll
 Comment[pt]=Protocolo Yahoo
 Comment[pt_BR]=Protocolo do Yahoo
+Comment[ro]=Protocol Yahoo
 Comment[sr]=Протокол Јахуа
 Comment[sr@ijekavian]=Протокол Јахуа
 Comment[sr@ijekavianlatin]=Protokol Yahooa
@@ -54,6 +55,7 @@ Name[nl]=Yahoo
 Name[nn]=Yahoo
 Name[pt]=Yahoo
 Name[pt_BR]=Yahoo
+Name[ro]=Yahoo
 Name[sr]=Јаху
 Name[sr@ijekavian]=Јаху
 Name[sr@ijekavianlatin]=Yahoo
