--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -33,6 +33,7 @@ Name[nn]=Kontakthandlingar
 Name[pa]=ਸੰਪਰਕ ਐਕਸ਼ਨ
 Name[pt]=Acções do Contacto
 Name[pt_BR]=Ações do contatos
+Name[ro]=Acțiuni contacte
 Name[sr]=Радње са контактима
 Name[sr@ijekavian]=Радње са контактима
 Name[sr@ijekavianlatin]=Radnje sa kontaktima
@@ -70,6 +71,7 @@ Comment[nn]=Set opp kontakthandlingar
 Comment[pa]=ਸੰਪਰਕ ਐਕਸ਼ਨ ਸੰਰਚਨਾ
 Comment[pt]=Configurar as Acções do Contacto
 Comment[pt_BR]=Configura as ações do contato
+Comment[ro]=Configurează acțiunile contact
 Comment[sr]=Подесите радње са контактима
 Comment[sr@ijekavian]=Подесите радње са контактима
 Comment[sr@ijekavianlatin]=Podesite radnje sa kontaktima
