--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -23,6 +23,7 @@ Comment[nl]=Gadu-Gadu-protocol
 Comment[nn]=Gadu-Gadu-protokoll
 Comment[pt]=Protocolo Gadu-Gadu
 Comment[pt_BR]=Protocolo do Gadu-Gadu
+Comment[ro]=Protocol Gadu-Gadu
 Comment[ru]=Протокол Gadu-Gadu
 Comment[sr]=Протокол гаду‑гаду
 Comment[sr@ijekavian]=Протокол гаду‑гаду
@@ -55,6 +56,7 @@ Name[nl]=Gadu-Gadu
 Name[nn]=Gadu-Gadu
 Name[pt]=Gadu-Gadu
 Name[pt_BR]=Gadu-Gadu
+Name[ro]=Gadu-Gadu
 Name[ru]=Gadu-Gadu
 Name[sr]=Гаду‑гаду
 Name[sr@ijekavian]=Гаду‑гаду
