--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -23,6 +23,7 @@ Comment[nl]=Jabber-protocol
 Comment[nn]=Jabber-protokoll
 Comment[pt]=Protocolo Jabber
 Comment[pt_BR]=Protocolo do Jabber
+Comment[ro]=Protocol Jabber
 Comment[ru]=Протокол Jabber
 Comment[sr]=Протокол џабер
 Comment[sr@ijekavian]=Протокол џабер
@@ -55,6 +56,7 @@ Name[nl]=Jabber
 Name[nn]=Jabber
 Name[pt]=Jabber
 Name[pt_BR]=Jabber
+Name[ro]=Jabber
 Name[ru]=Jabber
 Name[sr]=Џабер
 Name[sr@ijekavian]=Џабер
