--- a/kontactinterface/kontactplugin.desktop
+++ b/kontactinterface/kontactplugin.desktop
@@ -25,6 +25,7 @@ Name[nn]=Kontakt-tillegg
 Name[pa]=ਕੇਸੰਪਰਕ ਪਲੱਗਇਨ
 Name[pt]='Plugin' do Kontact
 Name[pt_BR]=Plug-in do Kontact
+Name[ro]=Modul Kontact
 Name[sl]=Vstavek za Kontact
 Name[sr]=Прикључак за Контакт
 Name[sr@ijekavian]=Прикључак за Контакт
