- take out kblog for wince
svn path=/trunk/KDE/kdepimlibs/; revision=1202557

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -165,7 +165,9 @@ add_subdirectory(qgpgme)
 if (NOT KDEPIM_ONLY_KLEO)
   add_subdirectory(kabc)
   if (NOT KDEPIM_NO_KCAL)
+    if (NOT WINCE)
     add_subdirectory(kblog)
+    endif(NOT WINCE)
     add_subdirectory(kcal)
   endif (NOT KDEPIM_NO_KCAL)
   add_subdirectory(kcalcore)
