SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdepimlibs/; revision=1206944

--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -48,6 +48,7 @@ Name[es]=Gadu-Gadu
 Name[et]=Gadu-Gadu
 Name[fr]=Gadu-Gadu
 Name[ga]=Gadu-Gadu
+Name[hu]=Gadu-Gadu
 Name[it]=Gadu-Gadu
 Name[km]=Gadu-Gadu
 Name[nb]=Gadu-Gadu
