--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -47,6 +47,7 @@ Name[es]=GroupWise
 Name[et]=GroupWise
 Name[fr]=GroupWise
 Name[ga]=GroupWise
+Name[hu]=GroupWise
 Name[it]=GroupWise
 Name[km]=GroupWise​
 Name[nb]=GroupWise
