--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -48,6 +48,7 @@ Name[es]=Jabber
 Name[et]=Jabber
 Name[fr]=Jabber
 Name[ga]=Jabber
+Name[hu]=Jabber
 Name[it]=Jabber
 Name[km]=Jabber
 Name[nb]=Jabber
