--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -47,6 +47,7 @@ Name[es]=Meanwhile
 Name[et]=Meanwhile
 Name[fr]=Meanwhile
 Name[ga]=Meanwhile
+Name[hu]=Meanwhile
 Name[it]=Meanwhile
 Name[km]=Meanwhile
 Name[nb]=Meanwhile
