SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.6/kdepimlibs/; revision=1209539

--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Protocolo Gadu-Gadu
 Comment[et]=Gadu-Gadu protokoll
 Comment[fr]=Protocole Gadu-Gadu
 Comment[ga]=Prótacal Gadu-Gadu
+Comment[hu]=Gadu-Gadu protokoll
 Comment[it]=Protocollo Gadu-Gadu
 Comment[km]=ពិធីការ​ Gadu-Gadu
 Comment[nb]=Gadu-Gadu-protokoll
