--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Mensajería de Novell GroupWise
 Comment[et]=Novell GroupWise Messenger
 Comment[fr]=Messagerie GroupWise Novell
 Comment[ga]=Teachtaire Novell GroupWise
+Comment[hu]=Novell GroupWise üzenetküldő
 Comment[it]=Novell GroupWise Messenger
 Comment[km]=កម្មវិធី​ផ្ញើសារ​របស់ Novell GroupWise
 Comment[nb]=Novell GroupWise meldingsprogram
