--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Protocolo ICQ
 Comment[et]=ICQ protokoll
 Comment[fr]=Protocole ICQ
 Comment[ga]=Prótacal ICQ
+Comment[hu]=ICQ protokoll
 Comment[it]=Protocollo ICQ
 Comment[km]=ពិធីការ​ ICQ
 Comment[nb]=ICQ-protokoll
