--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Internet Relay Chat
 Comment[et]=Rühmadiskussioon internetis
 Comment[fr]=Relai Internet de discussion
 Comment[ga]=Internet Relay Chat
+Comment[hu]=Internet Relay Chat
 Comment[it]=Internet Relay Chat
 Comment[km]=ជជែកកំសាន្ត​បញ្ជូន​តាម​អ៊ីនធឺណិត​
 Comment[nb]=Internet Relay Chat
