--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Protocolo Jabber
 Comment[et]=Jabberi protokoll
 Comment[fr]=Protocole Jabber
 Comment[ga]=Prótacal Jabber
+Comment[hu]=Jabber protokoll
 Comment[it]=Protocollo Jabber
 Comment[km]=ពិធី​​ការ​ Jabber
 Comment[nb]=Jabber-protokoll
