--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Telefonía por internet de Skype
 Comment[et]=Internetitelefon Skype
 Comment[fr]=Téléphonie sur internet Skype
 Comment[ga]=Teileafónaíocht Idirlín Skype
+Comment[hu]=Skype internetes telefon
 Comment[it]=Telefonia su Internet di Skype
 Comment[km]=ទូរស័ព្ទ​តាម​អ៊ីនធឺណិត​ ​Skype​
 Comment[nb]=Skype IP-telefoni
