--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Protocolo SMS
 Comment[et]=SMS protokoll
 Comment[fr]=Protocole SMS
 Comment[ga]=Prótacal SMS
+Comment[hu]=SMS protokoll
 Comment[it]=Protocollo SMS
 Comment[km]=ពិធីការ​ SMS ​​
 Comment[nb]=SMS Protokoll
