--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Protocolo Yahoo
 Comment[et]=Yahoo protokoll
 Comment[fr]=Protocole Yahoo
 Comment[ga]=Prótacal Yahoo
+Comment[hu]=Yahoo protokoll
 Comment[it]=Protocollo Yahoo
 Comment[km]=ពិធីការ​យ៉ាហ៊ូ​
 Comment[nb]=Yahoo-protokoll
