--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -22,6 +22,7 @@ Name[fi]=Yhteystietotoiminnot
 Name[fr]=Actions sur les contacts
 Name[ga]=Gníomhartha Teagmhála
 Name[gl]=Accións de contacto
+Name[hu]=Névjegyműveletek
 Name[it]=Azioni per i contatti
 Name[ja]=連絡先アクション
 Name[km]=អំពើ​ទំនាក់​ទំនង
@@ -59,6 +60,7 @@ Comment[fi]=Yhteystietotoimintojen asetukset
 Comment[fr]=Configurer les actions sur les contacts
 Comment[ga]=Cumraigh na Gníomhartha Teagmhála
 Comment[gl]=Configurar as accións de contacto
+Comment[hu]=A névjegyműveletek beállítása
 Comment[it]=Configura le azioni per i contatti
 Comment[ja]=連絡先アクションの設定
 Comment[km]=កំណត់​រចនាសម្ព័ន្ធ​អំពើ​ទំនាក់​ទំនង
