--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Protocolo AIM
 Comment[et]=AIM protokoll
 Comment[fr]=Protocole AIM
 Comment[ga]=Prótacal AIM
+Comment[hu]=AIM protokoll
 Comment[it]=Protocollo AIM
 Comment[km]=ពិធីការ​ AIM ​​
 Comment[nb]=AIM-protokoll
