--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Protocolo Meanwhile
 Comment[et]=Meanwhile'i protokoll
 Comment[fr]=Protocole Meanwhile
 Comment[ga]=Prótacal Meanwhile
+Comment[hu]=Meanwhile protokoll
 Comment[it]=Protocollo Meanwhile
 Comment[km]=ពិធីការ​ Meanwhile
 Comment[nb]=Meanwhile-protokoll
