SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.6/kdepimlibs/; revision=1209828

--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -18,6 +18,7 @@ Comment[ga]=Prótacal AIM
 Comment[hu]=AIM protokoll
 Comment[it]=Protocollo AIM
 Comment[km]=ពិធីការ​ AIM ​​
+Comment[lt]=AIM protokolas
 Comment[nb]=AIM-protokoll
 Comment[nds]=AIM-Protokoll
 Comment[nl]=AIM-protocol
@@ -52,6 +53,7 @@ Name[ga]=AIM
 Name[hu]=AIM
 Name[it]=AIM
 Name[km]=AIM​
+Name[lt]=AIM
 Name[nb]=AIM
 Name[nds]=AIM
 Name[nl]=AIM
