--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -18,6 +18,7 @@ Comment[ga]=Teachtaire Novell GroupWise
 Comment[hu]=Novell GroupWise üzenetküldő
 Comment[it]=Novell GroupWise Messenger
 Comment[km]=កម្មវិធី​ផ្ញើសារ​របស់ Novell GroupWise
+Comment[lt]=Novell GroupWise žinučių klientas
 Comment[nb]=Novell GroupWise meldingsprogram
 Comment[nds]=Novell-GroupWise-Kortnarichtenmaker
 Comment[nl]=Protocol voor Novell GroupWise Messenger
@@ -51,6 +52,7 @@ Name[ga]=GroupWise
 Name[hu]=GroupWise
 Name[it]=GroupWise
 Name[km]=GroupWise​
+Name[lt]=GroupWise
 Name[nb]=GroupWise
 Name[nds]=GroupWise
 Name[nl]=GroupWise
