--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -18,6 +18,7 @@ Comment[ga]=Prótacal Jabber
 Comment[hu]=Jabber protokoll
 Comment[it]=Protocollo Jabber
 Comment[km]=ពិធី​​ការ​ Jabber
+Comment[lt]=Jabber protokolas
 Comment[nb]=Jabber-protokoll
 Comment[nds]=Jabber-Protokoll
 Comment[nl]=Jabber-protocol
@@ -52,6 +53,7 @@ Name[ga]=Jabber
 Name[hu]=Jabber
 Name[it]=Jabber
 Name[km]=Jabber
+Name[lt]=Jabber
 Name[nb]=Jabber
 Name[nds]=Jabber
 Name[nl]=Jabber
