--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -18,6 +18,7 @@ Comment[ga]=Prótacal Meanwhile
 Comment[hu]=Meanwhile protokoll
 Comment[it]=Protocollo Meanwhile
 Comment[km]=ពិធីការ​ Meanwhile
+Comment[lt]=Meanwhile protokolas
 Comment[nb]=Meanwhile-protokoll
 Comment[nds]=Meanwhile-Protokoll
 Comment[nl]=Meanwhile-protocol
@@ -51,6 +52,7 @@ Name[ga]=Meanwhile
 Name[hu]=Meanwhile
 Name[it]=Meanwhile
 Name[km]=Meanwhile
+Name[lt]=Meanwhile
 Name[nb]=Meanwhile
 Name[nds]=Meanwhile
 Name[nl]=Meanwhile
