--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -26,6 +26,7 @@ Name[hu]=Névjegyműveletek
 Name[it]=Azioni per i contatti
 Name[ja]=連絡先アクション
 Name[km]=អំពើ​ទំនាក់​ទំនង
+Name[lt]=Veiksmai su kontaktais
 Name[lv]=Kontaktu darbības
 Name[nb]=Kontakthandlinger
 Name[nds]=Kontakt-Akschonen
@@ -33,7 +34,7 @@ Name[nl]=Contactpersoon-acties
 Name[nn]=Kontakthandlingar
 Name[pa]=ਸੰਪਰਕ ਐਕਸ਼ਨ
 Name[pt]=Acções do Contacto
-Name[pt_BR]=Ações do contatos
+Name[pt_BR]=Ações dos contatos
 Name[ro]=Acțiuni contacte
 Name[sr]=Радње са контактима
 Name[sr@ijekavian]=Радње са контактима
