--- a/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
+++ b/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
@@ -17,6 +17,7 @@ Name[ga]=Prótacal Teachtaireachtaí Meandaracha KAddressbook
 Name[hu]=KAddressbook azonnali üzenetküldő protokoll
 Name[it]=Protocollo di messaggi istantanei di KAddressbook
 Name[km]=ពិធីការ​ផ្ញើ​សារ​បន្ទាន់​របស់ KAddressbook
+Name[lt]=KAdresų knygelės momentinių pranešimų protokolas
 Name[nb]=KAdressbook lynmeldingsprotokoll
 Name[nds]=KAddressbook-Kortnarichten-Protokoll
 Name[nl]=KAddressbook Instant Messaging-protocol
