--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -18,6 +18,7 @@ Comment[ga]=Prótacal Gadu-Gadu
 Comment[hu]=Gadu-Gadu protokoll
 Comment[it]=Protocollo Gadu-Gadu
 Comment[km]=ពិធីការ​ Gadu-Gadu
+Comment[lt]=Gadu-Gadu protokolas
 Comment[nb]=Gadu-Gadu-protokoll
 Comment[nds]=Gadu-Gadu-Protokoll
 Comment[nl]=Gadu-Gadu-protocol
@@ -52,6 +53,7 @@ Name[ga]=Gadu-Gadu
 Name[hu]=Gadu-Gadu
 Name[it]=Gadu-Gadu
 Name[km]=Gadu-Gadu
+Name[lt]=Gadu-Gadu
 Name[nb]=Gadu-Gadu
 Name[nds]=Gadu-Gadu
 Name[nl]=Gadu-Gadu
