--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -18,6 +18,7 @@ Comment[ga]=Prótacal ICQ
 Comment[hu]=ICQ protokoll
 Comment[it]=Protocollo ICQ
 Comment[km]=ពិធីការ​ ICQ
+Comment[lt]=ICQ protokolas
 Comment[nb]=ICQ-protokoll
 Comment[nds]=ICQ-Protokoll
 Comment[nl]=ICQ-protocol
@@ -52,6 +53,7 @@ Name[ga]=ICQ
 Name[hu]=ICQ
 Name[it]=ICQ
 Name[km]=ICQ
+Name[lt]=ICQ
 Name[nb]=ICQ
 Name[nds]=ICQ
 Name[nl]=ICQ
