--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -18,6 +18,7 @@ Comment[ga]=Internet Relay Chat
 Comment[hu]=Internet Relay Chat
 Comment[it]=Internet Relay Chat
 Comment[km]=ជជែកកំសាន្ត​បញ្ជូន​តាម​អ៊ីនធឺណិត​
+Comment[lt]=Internetu vykstantys pokalbiai (IRC)
 Comment[nb]=Internet Relay Chat
 Comment[nds]=Klöönsnack (Internet Relay Chat)
 Comment[nl]=Internet Relay Chat
@@ -50,6 +51,7 @@ Name[ga]=IRC
 Name[hu]=IRC
 Name[it]=IRC
 Name[km]=IRC​
+Name[lt]=IRC
 Name[nb]=IRC
 Name[nds]=IRC
 Name[nl]=IRC
