--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -18,6 +18,7 @@ Comment[ga]=MSN Messenger
 Comment[hu]=MSN Messenger
 Comment[it]=MSN Messenger
 Comment[km]=កម្មវិធី​ផ្ញើសារ MSN
+Comment[lt]=MSN žinučių klientas
 Comment[nb]=MSN Messenger
 Comment[nds]=MSN-Kortnarichtenmaker
 Comment[nl]=MSN Messenger
@@ -50,6 +51,7 @@ Name[ga]=MSN Messenger
 Name[hu]=MSN Messenger
 Name[it]=MSN Messenger
 Name[km]=កម្មវិធី​ផ្ញើសារ MSN
+Name[lt]=MSN žinučių klientas
 Name[nb]=MSN Messenger
 Name[nds]=MSN-Kortnarichtenmaker
 Name[nl]=MSN Messenger
