--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -18,6 +18,7 @@ Comment[ga]=Teileafónaíocht Idirlín Skype
 Comment[hu]=Skype internetes telefon
 Comment[it]=Telefonia su Internet di Skype
 Comment[km]=ទូរស័ព្ទ​តាម​អ៊ីនធឺណិត​ ​Skype​
+Comment[lt]=Skype interneto telefonija
 Comment[nb]=Skype IP-telefoni
 Comment[nds]=Internet-Telefoneren mit Skype
 Comment[nl]=Skype internet-telefonie
@@ -50,6 +51,7 @@ Name[ga]=Skype
 Name[hu]=Skype
 Name[it]=Skype
 Name[km]=Skype
+Name[lt]=Skype
 Name[nb]=Skype
 Name[nds]=Skype
 Name[nl]=Skype
