--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -18,6 +18,7 @@ Comment[ga]=Prótacal SMS
 Comment[hu]=SMS protokoll
 Comment[it]=Protocollo SMS
 Comment[km]=ពិធីការ​ SMS ​​
+Comment[lt]=SMS protokolas
 Comment[nb]=SMS Protokoll
 Comment[nds]=SMS-Protokoll
 Comment[nl]=SMS-protocol
@@ -51,6 +52,7 @@ Name[ga]=SMS
 Name[hu]=SMS
 Name[it]=SMS
 Name[km]=SMS
+Name[lt]=SMS
 Name[nb]=SMS
 Name[nds]=SMS
 Name[nl]=SMS
