--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -18,6 +18,7 @@ Comment[ga]=Prótacal Yahoo
 Comment[hu]=Yahoo protokoll
 Comment[it]=Protocollo Yahoo
 Comment[km]=ពិធីការ​យ៉ាហ៊ូ​
+Comment[lt]=Yahoo protokolas
 Comment[nb]=Yahoo-protokoll
 Comment[nds]=Yahoo-Protokoll
 Comment[nl]=Yahoo-protocol
@@ -51,6 +52,7 @@ Name[ga]=Yahoo
 Name[hu]=Yahoo
 Name[it]=Yahoo
 Name[km]=យ៉ាហ៊ូ​
+Name[lt]=Yahoo
 Name[nb]=Yahoo
 Name[nds]=Yahoo
 Name[nl]=Yahoo
