SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.6/kdepimlibs/; revision=1210579

--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -62,6 +62,7 @@ Name[pt]=AIM
 Name[pt_BR]=AIM
 Name[ro]=AIM
 Name[ru]=AIM
+Name[sl]=AIM
 Name[sr]=АИМ
 Name[sr@ijekavian]=АИМ
 Name[sr@ijekavianlatin]=AIM
