--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -62,6 +62,7 @@ Name[pt]=Gadu-Gadu
 Name[pt_BR]=Gadu-Gadu
 Name[ro]=Gadu-Gadu
 Name[ru]=Gadu-Gadu
+Name[sl]=Gadu-Gadu
 Name[sr]=Гаду‑гаду
 Name[sr@ijekavian]=Гаду‑гаду
 Name[sr@ijekavianlatin]=Gadu‑Gadu
