--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -60,6 +60,7 @@ Name[nn]=GroupWise
 Name[pt]=GroupWise
 Name[pt_BR]=GroupWise
 Name[ro]=GroupWise
+Name[sl]=GroupWise
 Name[sr]=Групвајз
 Name[sr@ijekavian]=Групвајз
 Name[sr@ijekavianlatin]=GroupWise
