--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -27,6 +27,7 @@ Comment[pt]=Protocolo ICQ
 Comment[pt_BR]=Protocolo do ICQ
 Comment[ro]=Protocol ICQ
 Comment[ru]=Протокол ICQ
+Comment[sl]=Protokol ICQ
 Comment[sr]=Протокол ајсикју
 Comment[sr@ijekavian]=Протокол ајсикју
 Comment[sr@ijekavianlatin]=Protokol ICQ
@@ -62,6 +63,7 @@ Name[pt]=ICQ
 Name[pt_BR]=ICQ
 Name[ro]=ICQ
 Name[ru]=ICQ
+Name[sl]=ICQ
 Name[sr]=ајсикју
 Name[sr@ijekavian]=ајсикју
 Name[sr@ijekavianlatin]=ICQ
