--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -26,6 +26,7 @@ Comment[nn]=Internet Relay Chat
 Comment[pt]=Internet Relay Chat
 Comment[pt_BR]=Bate-papo via Internet (IRC)
 Comment[ro]=Internet Relay Chat
+Comment[sl]=Internet Relay Chat
 Comment[sr]=Ћаскање путем Интернета
 Comment[sr@ijekavian]=Ћаскање путем Интернета
 Comment[sr@ijekavianlatin]=Ćaskanje putem Interneta
@@ -60,6 +61,7 @@ Name[pt]=IRC
 Name[pt_BR]=IRC
 Name[ro]=IRC
 Name[ru]=IRC
+Name[sl]=IRC
 Name[sr]=ИРЦ
 Name[sr@ijekavian]=ИРЦ
 Name[sr@ijekavianlatin]=IRC
