--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -59,6 +59,7 @@ Name[nn]=MSN Messenger
 Name[pt]=MSN Messenger
 Name[pt_BR]=MSN Messenger
 Name[ro]=Mesagerul MSN
+Name[sl]=MSN Messenger
 Name[sr]=МСН месенџер
 Name[sr@ijekavian]=МСН месенџер
 Name[sr@ijekavianlatin]=MSN Messenger
