--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -59,6 +59,7 @@ Name[nn]=Skype
 Name[pt]=Skype
 Name[pt_BR]=Skype
 Name[ro]=Skype
+Name[sl]=Skype
 Name[sr]=Скајп
 Name[sr@ijekavian]=Скајп
 Name[sr@ijekavianlatin]=Skype
