--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -75,6 +75,7 @@ Comment[pa]=ਸੰਪਰਕ ਐਕਸ਼ਨ ਸੰਰਚਨਾ
 Comment[pt]=Configurar as Acções do Contacto
 Comment[pt_BR]=Configura as ações do contato
 Comment[ro]=Configurează acțiunile contact
+Comment[sl]=Nastavi dejanja stikov
 Comment[sr]=Подесите радње са контактима
 Comment[sr@ijekavian]=Подесите радње са контактима
 Comment[sr@ijekavianlatin]=Podesite radnje sa kontaktima
