--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -27,6 +27,7 @@ Comment[pt]=Protocolo Jabber
 Comment[pt_BR]=Protocolo do Jabber
 Comment[ro]=Protocol Jabber
 Comment[ru]=Протокол Jabber
+Comment[sl]=Protokol Jabber
 Comment[sr]=Протокол џабер
 Comment[sr@ijekavian]=Протокол џабер
 Comment[sr@ijekavianlatin]=Protokol Jabber
@@ -62,6 +63,7 @@ Name[pt]=Jabber
 Name[pt_BR]=Jabber
 Name[ro]=Jabber
 Name[ru]=Jabber
+Name[sl]=Jabber
 Name[sr]=Џабер
 Name[sr@ijekavian]=Џабер
 Name[sr@ijekavianlatin]=Jabber
