--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -26,6 +26,7 @@ Comment[nn]=SMS-protokoll
 Comment[pt]=Protocolo SMS
 Comment[pt_BR]=Protocolo SMS
 Comment[ro]=Protocol SMS
+Comment[sl]=Protokol SMS
 Comment[sr]=Протокол СМС
 Comment[sr@ijekavian]=Протокол СМС
 Comment[sr@ijekavianlatin]=Protokol SMS
@@ -60,6 +61,7 @@ Name[nn]=SMS
 Name[pt]=SMS
 Name[pt_BR]=SMS
 Name[ro]=SMS
+Name[sl]=SMS
 Name[sr]=СМС
 Name[sr@ijekavian]=СМС
 Name[sr@ijekavianlatin]=SMS
