SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.6/kdepimlibs/; revision=1211455

--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -17,6 +17,7 @@ Comment[fr]=Protocole AIM
 Comment[ga]=Prótacal AIM
 Comment[hu]=AIM protokoll
 Comment[it]=Protocollo AIM
+Comment[kk]=AIM протоколы
 Comment[km]=ពិធីការ​ AIM ​​
 Comment[lt]=AIM protokolas
 Comment[nb]=AIM-protokoll
@@ -52,6 +53,7 @@ Name[fr]=AIM
 Name[ga]=AIM
 Name[hu]=AIM
 Name[it]=AIM
+Name[kk]=AIM
 Name[km]=AIM​
 Name[lt]=AIM
 Name[nb]=AIM
