--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -17,6 +17,7 @@ Comment[fr]=Protocole Gadu-Gadu
 Comment[ga]=Prótacal Gadu-Gadu
 Comment[hu]=Gadu-Gadu protokoll
 Comment[it]=Protocollo Gadu-Gadu
+Comment[kk]=Gadu-Gadu протоколы
 Comment[km]=ពិធីការ​ Gadu-Gadu
 Comment[lt]=Gadu-Gadu protokolas
 Comment[nb]=Gadu-Gadu-protokoll
@@ -52,6 +53,7 @@ Name[fr]=Gadu-Gadu
 Name[ga]=Gadu-Gadu
 Name[hu]=Gadu-Gadu
 Name[it]=Gadu-Gadu
+Name[kk]=Gadu-Gadu
 Name[km]=Gadu-Gadu
 Name[lt]=Gadu-Gadu
 Name[nb]=Gadu-Gadu
