--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -17,6 +17,7 @@ Comment[fr]=Messagerie GroupWise Novell
 Comment[ga]=Teachtaire Novell GroupWise
 Comment[hu]=Novell GroupWise üzenetküldő
 Comment[it]=Novell GroupWise Messenger
+Comment[kk]=Novell GroupWise хабарласуы
 Comment[km]=កម្មវិធី​ផ្ញើសារ​របស់ Novell GroupWise
 Comment[lt]=Novell GroupWise žinučių klientas
 Comment[nb]=Novell GroupWise meldingsprogram
@@ -51,6 +52,7 @@ Name[fr]=GroupWise
 Name[ga]=GroupWise
 Name[hu]=GroupWise
 Name[it]=GroupWise
+Name[kk]=GroupWise
 Name[km]=GroupWise​
 Name[lt]=GroupWise
 Name[nb]=GroupWise
