--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -17,6 +17,7 @@ Comment[fr]=Relai Internet de discussion
 Comment[ga]=Internet Relay Chat
 Comment[hu]=Internet Relay Chat
 Comment[it]=Internet Relay Chat
+Comment[kk]=Internet Relay Chat
 Comment[km]=ជជែកកំសាន្ត​បញ្ជូន​តាម​អ៊ីនធឺណិត​
 Comment[lt]=Internetu vykstantys pokalbiai (IRC)
 Comment[nb]=Internet Relay Chat
@@ -51,6 +52,7 @@ Name[fr]=IRC
 Name[ga]=IRC
 Name[hu]=IRC
 Name[it]=IRC
+Name[kk]=IRC
 Name[km]=IRC​
 Name[lt]=IRC
 Name[nb]=IRC
