--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -17,6 +17,7 @@ Comment[fr]=Messagerie MSN
 Comment[ga]=MSN Messenger
 Comment[hu]=MSN Messenger
 Comment[it]=MSN Messenger
+Comment[kk]=MSN хабарласуы
 Comment[km]=កម្មវិធី​ផ្ញើសារ MSN
 Comment[lt]=MSN žinučių klientas
 Comment[nb]=MSN Messenger
@@ -50,6 +51,7 @@ Name[fr]=Messagerie MSN
 Name[ga]=MSN Messenger
 Name[hu]=MSN Messenger
 Name[it]=MSN Messenger
+Name[kk]=MSN Messenger
 Name[km]=កម្មវិធី​ផ្ញើសារ MSN
 Name[lt]=MSN žinučių klientas
 Name[nb]=MSN Messenger
