--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -17,6 +17,7 @@ Comment[fr]=Protocole SMS
 Comment[ga]=Prótacal SMS
 Comment[hu]=SMS protokoll
 Comment[it]=Protocollo SMS
+Comment[kk]=SMS протоколы
 Comment[km]=ពិធីការ​ SMS ​​
 Comment[lt]=SMS protokolas
 Comment[nb]=SMS Protokoll
@@ -52,6 +53,7 @@ Name[fr]=SMS
 Name[ga]=SMS
 Name[hu]=SMS
 Name[it]=SMS
+Name[kk]=SMS
 Name[km]=SMS
 Name[lt]=SMS
 Name[nb]=SMS
