--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -17,6 +17,7 @@ Comment[fr]=Protocole Yahoo
 Comment[ga]=Prótacal Yahoo
 Comment[hu]=Yahoo protokoll
 Comment[it]=Protocollo Yahoo
+Comment[kk]=Yahoo протоколы
 Comment[km]=ពិធីការ​យ៉ាហ៊ូ​
 Comment[lt]=Yahoo protokolas
 Comment[nb]=Yahoo-protokoll
@@ -51,6 +52,7 @@ Name[fr]=Yahoo
 Name[ga]=Yahoo
 Name[hu]=Yahoo
 Name[it]=Yahoo
+Name[kk]=Yahoo
 Name[km]=យ៉ាហ៊ូ​
 Name[lt]=Yahoo
 Name[nb]=Yahoo
