--- a/kcal/kcal_manager.desktop
+++ b/kcal/kcal_manager.desktop
@@ -20,6 +20,7 @@ Name[hne]=कलेन्डर
 Name[hu]=Naptár
 Name[it]=Calendario
 Name[ja]=カレンダー
+Name[kk]=Күнтізбе
 Name[km]=ប្រតិទិន
 Name[lt]=Kalendorius
 Name[lv]=Kalendārs
