--- a/kcal/local.desktop
+++ b/kcal/local.desktop
@@ -18,6 +18,7 @@ Name[hne]=लोकल फाइल मं कलेन्डर
 Name[hu]=Helyi naptárfájl
 Name[it]=Calendario in file locale
 Name[ja]=ローカルファイルのカレンダー
+Name[kk]=Жергілікті файлдағы күнтізбе
 Name[km]=ប្រតិទិន​ក្នុង​ឯកសារ​មូលដ្ឋាន
 Name[lt]=Kalendorius vietiniame faile
 Name[lv]=Kalendārs lokālā failā
@@ -63,6 +64,7 @@ Comment[gl]=Dá acceso a un calendario gardado nun único ficheiro local
 Comment[hu]=Helyi fájlban tárolt naptár elérését biztosítja.
 Comment[it]=Fornisce accesso ad un calendario memorizzato in un singolo file locale
 Comment[ja]=単一のローカルファイルに保存されているカレンダーへのアクセスを提供します。
+Comment[kk]=Бөлек жергілікті файлда сақталған күнтізбеге қатынау мүмкіндігін береді.
 Comment[km]=ផ្ដល់​ការ​ចូលដំណើរការ​ទៅកាន់​ប្រតិទិន​ដែល​បានផ្ទុក​នៅ​ក្នុង​​ឯកសារ​មូលដ្ឋាន​តែ​មួយ
 Comment[lt]=Suteikia prieigą prie kalendoriaus, esančio viename vietiniame faile
 Comment[lv]=Nodrošina piekļuvi kalendāram, kas glabājas vienā lokālā failā
