--- a/kresources/kresources_manager.desktop
+++ b/kresources/kresources_manager.desktop
@@ -17,6 +17,7 @@ Name[hne]=केरिसोर्स प्रबंधक
 Name[hu]=KResources-kezelő
 Name[it]=Gestore di KResources
 Name[ja]=KDE リソースマネージャ
+Name[kk]=KResources менеджері
 Name[km]=កម្មវិធី​គ្រប់គ្រង KResources
 Name[lt]=KResursų tvarkytuvė
 Name[lv]=KResources pārvaldnieks
@@ -65,6 +66,7 @@ Comment[hne]=केरिसोर्स प्रबंधक
 Comment[hu]=KResources-kezelő
 Comment[it]=Gestore di KResources
 Comment[ja]=KDE リソースマネージャ
+Comment[kk]=KResources менеджері
 Comment[km]=កម្មវិធី​គ្រប់គ្រង KResources
 Comment[lt]=KResursų tvarkytuvė
 Comment[lv]=KResources pārvaldnieks
