--- a/mailtransport/kcm_mailtransport.desktop
+++ b/mailtransport/kcm_mailtransport.desktop
@@ -30,6 +30,7 @@ Name[hne]=मेल ट्रांसपोर्ट
 Name[hu]=Levéltovábbítás
 Name[it]=Trasporto della posta
 Name[ja]=メール送信手段
+Name[kk]=Пошта тасымалдауы
 Name[km]=ការ​ដឹកជញ្ជូន​សំបុត្រ
 Name[lt]=Pašto programa
 Name[lv]=Pasta transports
