--- a/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
+++ b/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
@@ -16,6 +16,7 @@ Name[fr]=Protocole de messagerie instantanée KAdressbook
 Name[ga]=Prótacal Teachtaireachtaí Meandaracha KAddressbook
 Name[hu]=KAddressbook azonnali üzenetküldő protokoll
 Name[it]=Protocollo di messaggi istantanei di KAddressbook
+Name[kk]=KAddressbook-тың лезде хабарласу протоколы
 Name[km]=ពិធីការ​ផ្ញើ​សារ​បន្ទាន់​របស់ KAddressbook
 Name[lt]=KAdresų knygelės momentinių pranešimų protokolas
 Name[nb]=KAdressbook lynmeldingsprotokoll
