--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -17,6 +17,7 @@ Comment[fr]=Protocole ICQ
 Comment[ga]=Prótacal ICQ
 Comment[hu]=ICQ protokoll
 Comment[it]=Protocollo ICQ
+Comment[kk]=ICQ протоколыl
 Comment[km]=ពិធីការ​ ICQ
 Comment[lt]=ICQ protokolas
 Comment[nb]=ICQ-protokoll
@@ -53,6 +54,7 @@ Name[fr]=ICQ
 Name[ga]=ICQ
 Name[hu]=ICQ
 Name[it]=ICQ
+Name[kk]=ICQ
 Name[km]=ICQ
 Name[lt]=ICQ
 Name[nb]=ICQ
