--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -17,6 +17,7 @@ Comment[fr]=Protocole Jabber
 Comment[ga]=Prótacal Jabber
 Comment[hu]=Jabber protokoll
 Comment[it]=Protocollo Jabber
+Comment[kk]=Jabber протоколы
 Comment[km]=ពិធី​​ការ​ Jabber
 Comment[lt]=Jabber protokolas
 Comment[nb]=Jabber-protokoll
@@ -53,6 +54,7 @@ Name[fr]=Jabber
 Name[ga]=Jabber
 Name[hu]=Jabber
 Name[it]=Jabber
+Name[kk]=Jabber
 Name[km]=Jabber
 Name[lt]=Jabber
 Name[nb]=Jabber
