--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -17,6 +17,7 @@ Comment[fr]=Protocole Meanwhile
 Comment[ga]=Prótacal Meanwhile
 Comment[hu]=Meanwhile protokoll
 Comment[it]=Protocollo Meanwhile
+Comment[kk]=Meanwhile протоколы
 Comment[km]=ពិធីការ​ Meanwhile
 Comment[lt]=Meanwhile protokolas
 Comment[nb]=Meanwhile-protokoll
@@ -51,6 +52,7 @@ Name[fr]=Meanwhile
 Name[ga]=Meanwhile
 Name[hu]=Meanwhile
 Name[it]=Meanwhile
+Name[kk]=Meanwhile
 Name[km]=Meanwhile
 Name[lt]=Meanwhile
 Name[nb]=Meanwhile
