--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -17,6 +17,7 @@ Comment[fr]=Téléphonie sur internet Skype
 Comment[ga]=Teileafónaíocht Idirlín Skype
 Comment[hu]=Skype internetes telefon
 Comment[it]=Telefonia su Internet di Skype
+Comment[kk]=Skype Интернет телефоны
 Comment[km]=ទូរស័ព្ទ​តាម​អ៊ីនធឺណិត​ ​Skype​
 Comment[lt]=Skype interneto telefonija
 Comment[nb]=Skype IP-telefoni
@@ -50,6 +51,7 @@ Name[fr]=Skype
 Name[ga]=Skype
 Name[hu]=Skype
 Name[it]=Skype
+Name[kk]=Skype
 Name[km]=Skype
 Name[lt]=Skype
 Name[nb]=Skype
