--- a/akonadi/contact/kcm/akonadicontact_actions.desktop
+++ b/akonadi/contact/kcm/akonadicontact_actions.desktop
@@ -25,6 +25,7 @@ Name[gl]=Accións de contacto
 Name[hu]=Névjegyműveletek
 Name[it]=Azioni per i contatti
 Name[ja]=連絡先アクション
+Name[kk]=Контакттың амалдары
 Name[km]=អំពើ​ទំនាក់​ទំនង
 Name[lt]=Veiksmai su kontaktais
 Name[lv]=Kontaktu darbības
@@ -64,6 +65,7 @@ Comment[gl]=Configurar as accións de contacto
 Comment[hu]=A névjegyműveletek beállítása
 Comment[it]=Configura le azioni per i contatti
 Comment[ja]=連絡先アクションの設定
+Comment[kk]=Контакттың амалдарын баптау
 Comment[km]=កំណត់​រចនាសម្ព័ន្ធ​អំពើ​ទំនាក់​ទំនង
 Comment[lt]=Konfigūruoti kontaktų veiksmus
 Comment[lv]=Konfigurēt kontaktu darbības
