--- a/kcal/localdir.desktop
+++ b/kcal/localdir.desktop
@@ -18,6 +18,7 @@ Name[hne]=लोकल डिरेक्टरी मं कलेन्डर
 Name[hu]=Naptár helyi könyvtárban
 Name[it]=Calendario nella cartella locale
 Name[ja]=ローカルディレクトリのカレンダー
+Name[kk]=Жергілікті каталогтағы күнтізбе
 Name[km]=ប្រតិទិន​ក្នុង​ថត​មូលដ្ឋាន
 Name[lt]=Kalendorius vietiniame aplanke
 Name[lv]=Kalendārs lokālā mapē
@@ -63,6 +64,7 @@ Comment[gl]=Dá acceso aos obxectos do calendario, cada un gardado nun ficheiro 
 Comment[hu]=Helyi mappában tárolt naptérbejegyzések elérését biztosítja. Minden bejegyzés külön fájlban található.
 Comment[it]=Fornisce accesso a voci di calendario, ciascuna memorizzata in un singolo file in una data cartella
 Comment[ja]=それぞれが単一のファイルに保存されている任意のディレクトリ内のカレンダーアイテムへのアクセスを提供します。
+Comment[kk]=Көрсетілген қапшықта, бөлек файлдарда сақталған күнтізбенің жазуларына қатынау мүмкіндігін береді.
 Comment[km]=ផ្ដល់​ការ​ចូលដំណើរការ​ទៅ​កាន់​ធាតុ​ប្រតិទិន ធាតុ​នីមួយៗ​បាន​ផ្ទុក​នៅ​ក្នុង​ឯកសារ​តែ​មួយ នៅ​ក្នុង​ថត​ដែល​បាន​ផ្ដល់​ឲ្យ
 Comment[lt]=Suteikia prieigą prie kalendoriaus įrašų, kurie saugomi individualiai nurodytame aplanke
 Comment[lv]=Nodrošina piekļuvi kalendāra ierakstiem, kas katrs glabājas vienā failā, norādītā mapē
