--- a/kresources/kresources.desktop
+++ b/kresources/kresources.desktop
@@ -27,6 +27,7 @@ Name[hne]=केडीई संसाधन
 Name[hu]=KDE-erőforrások
 Name[it]=Risorse di KDE
 Name[ja]=KDE リソース
+Name[kk]=KDE деректер көзі
 Name[km]=ធនធាន​របស់ KDE
 Name[lt]=KDE resursai
 Name[lv]=KDE resursi
@@ -75,6 +76,7 @@ Comment[hne]=केडीई संसाधन मन ल कान्फिग
 Comment[hu]=A KDE-erőforrások beállítása
 Comment[it]=Configura le risorse di KDE
 Comment[ja]=KDE リソースの設定
+Comment[kk]=KDE деректер көзідерін баптау
 Comment[km]=កំណត់​រចនាសម្ព័ន្ធ​ធនធាន KDE
 Comment[lt]=Konfigūruoti KDE resursus
 Comment[lv]=Konfigurēt KDE resursus
