SVN_SILENT made messages (.desktop file)
svn path=/branches/KDE/4.6/kdepimlibs/; revision=1211952

--- a/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/groupwiseprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Mensajería de Novell GroupWise
 Comment[et]=Novell GroupWise Messenger
 Comment[fr]=Messagerie GroupWise Novell
 Comment[ga]=Teachtaire Novell GroupWise
+Comment[gl]=Mensaxeiro GroupWise da Novell
 Comment[hu]=Novell GroupWise üzenetküldő
 Comment[it]=Novell GroupWise Messenger
 Comment[kk]=Novell GroupWise хабарласуы
@@ -50,6 +51,7 @@ Name[es]=GroupWise
 Name[et]=GroupWise
 Name[fr]=GroupWise
 Name[ga]=GroupWise
+Name[gl]=GroupWise
 Name[hu]=GroupWise
 Name[it]=GroupWise
 Name[kk]=GroupWise
