--- a/akonadi/contact/editor/im/protocols/icqprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/icqprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Protocolo ICQ
 Comment[et]=ICQ protokoll
 Comment[fr]=Protocole ICQ
 Comment[ga]=Prótacal ICQ
+Comment[gl]=Protocolo ICQ
 Comment[hu]=ICQ protokoll
 Comment[it]=Protocollo ICQ
 Comment[kk]=ICQ протоколыl
@@ -52,6 +53,7 @@ Name[es]=ICQ
 Name[et]=ICQ
 Name[fr]=ICQ
 Name[ga]=ICQ
+Name[gl]=ICQ
 Name[hu]=ICQ
 Name[it]=ICQ
 Name[kk]=ICQ
