--- a/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/meanwhileprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Protocolo Meanwhile
 Comment[et]=Meanwhile'i protokoll
 Comment[fr]=Protocole Meanwhile
 Comment[ga]=Prótacal Meanwhile
+Comment[gl]=Protocolo Meanwhile
 Comment[hu]=Meanwhile protokoll
 Comment[it]=Protocollo Meanwhile
 Comment[kk]=Meanwhile протоколы
@@ -50,6 +51,7 @@ Name[es]=Meanwhile
 Name[et]=Meanwhile
 Name[fr]=Meanwhile
 Name[ga]=Meanwhile
+Name[gl]=Meanwhile
 Name[hu]=Meanwhile
 Name[it]=Meanwhile
 Name[kk]=Meanwhile
