--- a/akonadi/contact/editor/im/protocols/msnprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/msnprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=MSN Messenger
 Comment[et]=MSN Messenger
 Comment[fr]=Messagerie MSN
 Comment[ga]=MSN Messenger
+Comment[gl]=Mensaxeiro MSN
 Comment[hu]=MSN Messenger
 Comment[it]=MSN Messenger
 Comment[kk]=MSN хабарласуы
@@ -49,6 +50,7 @@ Name[es]=MSN Messenger
 Name[et]=MSN Messenger
 Name[fr]=Messagerie MSN
 Name[ga]=MSN Messenger
+Name[gl]=MSN Messenger
 Name[hu]=MSN Messenger
 Name[it]=MSN Messenger
 Name[kk]=MSN Messenger
