--- a/akonadi/contact/editor/im/protocols/smsprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/smsprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Protocolo SMS
 Comment[et]=SMS protokoll
 Comment[fr]=Protocole SMS
 Comment[ga]=Prótacal SMS
+Comment[gl]=Protocolo SMS
 Comment[hu]=SMS protokoll
 Comment[it]=Protocollo SMS
 Comment[kk]=SMS протоколы
@@ -51,6 +52,7 @@ Name[es]=SMS
 Name[et]=SMS
 Name[fr]=SMS
 Name[ga]=SMS
+Name[gl]=SMS
 Name[hu]=SMS
 Name[it]=SMS
 Name[kk]=SMS
