--- a/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
+++ b/akonadi/contact/editor/im/kaddressbookimprotocol.desktop
@@ -14,6 +14,7 @@ Name[es]=Protocolo de mensajería instantánea de KAddressbook
 Name[et]=KDE aadressiraamatu kiirsuhtlusprotokoll
 Name[fr]=Protocole de messagerie instantanée KAdressbook
 Name[ga]=Prótacal Teachtaireachtaí Meandaracha KAddressbook
+Name[gl]=Proctocolo de mensaxaría instantánea do KAddressbook
 Name[hu]=KAddressbook azonnali üzenetküldő protokoll
 Name[it]=Protocollo di messaggi istantanei di KAddressbook
 Name[kk]=KAddressbook-тың лезде хабарласу протоколы
