--- a/akonadi/contact/editor/im/protocols/aimprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/aimprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Protocolo AIM
 Comment[et]=AIM protokoll
 Comment[fr]=Protocole AIM
 Comment[ga]=Prótacal AIM
+Comment[gl]=Protocolo AIM
 Comment[hu]=AIM protokoll
 Comment[it]=Protocollo AIM
 Comment[kk]=AIM протоколы
@@ -51,6 +52,7 @@ Name[es]=AIM
 Name[et]=AIM
 Name[fr]=AIM
 Name[ga]=AIM
+Name[gl]=AIM
 Name[hu]=AIM
 Name[it]=AIM
 Name[kk]=AIM
