--- a/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/gaduprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Protocolo Gadu-Gadu
 Comment[et]=Gadu-Gadu protokoll
 Comment[fr]=Protocole Gadu-Gadu
 Comment[ga]=Prótacal Gadu-Gadu
+Comment[gl]=Protocolo Gadu-Gadu
 Comment[hu]=Gadu-Gadu protokoll
 Comment[it]=Protocollo Gadu-Gadu
 Comment[kk]=Gadu-Gadu протоколы
@@ -51,6 +52,7 @@ Name[es]=Gadu-Gadu
 Name[et]=Gadu-Gadu
 Name[fr]=Gadu-Gadu
 Name[ga]=Gadu-Gadu
+Name[gl]=Gadu-Gadu
 Name[hu]=Gadu-Gadu
 Name[it]=Gadu-Gadu
 Name[kk]=Gadu-Gadu
