--- a/akonadi/contact/editor/im/protocols/ircprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/ircprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Internet Relay Chat
 Comment[et]=Rühmadiskussioon internetis
 Comment[fr]=Relai Internet de discussion
 Comment[ga]=Internet Relay Chat
+Comment[gl]=Conversas por Internet
 Comment[hu]=Internet Relay Chat
 Comment[it]=Internet Relay Chat
 Comment[kk]=Internet Relay Chat
@@ -50,6 +51,7 @@ Name[es]=IRC
 Name[et]=IRC
 Name[fr]=IRC
 Name[ga]=IRC
+Name[gl]=IRC
 Name[hu]=IRC
 Name[it]=IRC
 Name[kk]=IRC
