--- a/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/jabberprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Protocolo Jabber
 Comment[et]=Jabberi protokoll
 Comment[fr]=Protocole Jabber
 Comment[ga]=Prótacal Jabber
+Comment[gl]=Protocolo Jabber
 Comment[hu]=Jabber protokoll
 Comment[it]=Protocollo Jabber
 Comment[kk]=Jabber протоколы
@@ -52,6 +53,7 @@ Name[es]=Jabber
 Name[et]=Jabber
 Name[fr]=Jabber
 Name[ga]=Jabber
+Name[gl]=Jabber
 Name[hu]=Jabber
 Name[it]=Jabber
 Name[kk]=Jabber
