--- a/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/skypeprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Telefonía por internet de Skype
 Comment[et]=Internetitelefon Skype
 Comment[fr]=Téléphonie sur internet Skype
 Comment[ga]=Teileafónaíocht Idirlín Skype
+Comment[gl]=Telefonía por Internet de Skype
 Comment[hu]=Skype internetes telefon
 Comment[it]=Telefonia su Internet di Skype
 Comment[kk]=Skype Интернет телефоны
@@ -49,6 +50,7 @@ Name[es]=Skype
 Name[et]=Skype
 Name[fr]=Skype
 Name[ga]=Skype
+Name[gl]=Skype
 Name[hu]=Skype
 Name[it]=Skype
 Name[kk]=Skype
