--- a/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
+++ b/akonadi/contact/editor/im/protocols/yahooprotocol.desktop
@@ -15,6 +15,7 @@ Comment[es]=Protocolo Yahoo
 Comment[et]=Yahoo protokoll
 Comment[fr]=Protocole Yahoo
 Comment[ga]=Prótacal Yahoo
+Comment[gl]=Protocolo Yahoo
 Comment[hu]=Yahoo protokoll
 Comment[it]=Protocollo Yahoo
 Comment[kk]=Yahoo протоколы
@@ -50,6 +51,7 @@ Name[es]=Yahoo
 Name[et]=Yahoo
 Name[fr]=Yahoo
 Name[ga]=Yahoo
+Name[gl]=Yahoo
 Name[hu]=Yahoo
 Name[it]=Yahoo
 Name[kk]=Yahoo
