--- a/kresources/kresources.desktop
+++ b/kresources/kresources.desktop
@@ -22,7 +22,7 @@ Name[et]=KDE ressursid
 Name[fi]=KDE-resurssit
 Name[fr]=Ressources KDE
 Name[ga]=Acmhainní KDE
-Name[gl]=Recursos de KDE
+Name[gl]=Recursos do KDE
 Name[hne]=केडीई संसाधन
 Name[hu]=KDE-erőforrások
 Name[it]=Risorse di KDE
@@ -71,7 +71,7 @@ Comment[et]=KDE ressursside seadistamine
 Comment[fi]=KDE-resurssien asetukset
 Comment[fr]=Configurer les ressources KDE
 Comment[ga]=Cumraigh Acmhainní KDE
-Comment[gl]=Configurar os recursos de KDE
+Comment[gl]=Configurar os recursos do KDE
 Comment[hne]=केडीई संसाधन मन ल कान्फिगर करव
 Comment[hu]=A KDE-erőforrások beállítása
 Comment[it]=Configura le risorse di KDE
